# spin

./: .gitignore  Cargo.toml  convert.py  hardware.org  todo.org
arduino/sketch_jul27b/: sketch_jul27b.ino
arduino/sketch_jul31a/: sketch_jul31a.ino
arduino/spin-test-1/: spin-test-1.ino
examples/: cycle.rs  cycle2.rs  draw.rs
pcb/: .gitignore  spinny1-cache.lib  spinny1.pro  spinny1.sch  stm32f410r8-lqfp64.bck  stm32f410r8-lqfp64.dcm
pcb/lib/: spin.dcm  spin.lib
pcb/lib/cad/: SRU1028.fcstd  SRU1028.wrl
pcb/lib/spin.pretty/: 4700S_Series.kicad_mod  ASDMB-12.000MHZ-LC-T.kicad_mod  Button.kicad_mod  EVP-AYG0BA.kicad_mod  Hole-3mm.kicad_mod  LED_CLV1L-PLCC4.kicad_mod  LGA16.kicad_mod  MP34DT01-M.kicad_mod  SOT-223.kicad_mod  SRU1028-10x10-Octogon.kicad_mod  STM32F410-LQFP64.kicad_mod  TLC5926.kicad_mod  WSON-8_2x2mm.kicad_mod  ZX62M-B-5P.kicad_mod  Zip-tie-slot.kicad_mod
pcb/prototype1/: noname.kicad_pcb  prototype1-cache.bak  prototype1-cache.lib  prototype1-rescue.lib  prototype1.bak  prototype1.csv  prototype1.kicad_pcb  prototype1.kicad_pcb-bak  prototype1.net  prototype1.pro  prototype1.sch  prototype1.xml
pcb/prototype1/.pretty/: LED_CLV1L-PLCC4.kicad_mod  LED_WS2812B-PLCC4.kicad_mod
pcb/prototype1/led.pretty/: LED_CLV1L-PLCC4.kicad_mod  LED_WS2812B-PLCC4.kicad_mod
rust/: Cargo.toml
rust/examples/: blink1.rs  cycle.rs  cycle2.rs  from_ard.rs  rainbow.rs  sim1.rs
rust/src/: color.rs  lib.rs  sim.rs  spin.rs
rust/src/sim/: conrod_spin.rs  glium.rs  mod.rs
spin-convert/: Cargo.toml
spin-convert/src/: main.rs
src/: color.rs  convert_image.rs  lib.rs  sim.rs  spin.rs  text.rs
src/spin/: mod.rs
