[package]
  name = "spin"
  version = "0.1.0"
  authors = ["Paho Lurie-Gregg <paho@paholg.com>"]

[dependencies]
  # General:
  typenum = "*"
  # generic-array = "*"

  # For sim:
  glium = "*"

  # Temporary:
  rand = "*"
  palette = "*"

[dependencies.generic-array]
  path = "../../src/generic-array"

# For microcontroller:

# [features]
#    default = ["mcu_lpc11xx"]
#    mcu_lpc11xx = ["zinc/mcu_lpc11xx"]
# [dependencies]
#    rust-libcore = "*"

# [dependencies.zinc]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   # features = ["mcu_lpc11xx"]

# [dependencies.macro_platformtree]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "macro_platformtree"

# [dependencies.ioreg]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "ioreg"

# [dependencies.platformtree]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "platformtree"

# [dependencies.macro_zinc]
#   git = "https://github.com/hackndev/zinc"
