[package]
  name = "spin"
  version = "0.1.0"
  authors = ["Paho Lurie-Gregg <paho@paholg.com>"]

[features]
  no_std = ["approx/no_std", "glium"]
  sim = ["glium", "rand"]

# General dependencies
[dependencies]
  typenum = "*"
  generic-array = "*"

  # Sim dependencies
  glium = { version = "*", optional = true }
  # Temporary dependencies
  rand = { version = "*", optional = true }

  # Maybe? dependencies
  approx = { git = "https://github.com/paholg/approx", branch = "no_std" }


# For microcontroller:

# [features]
#    default = ["mcu_lpc11xx"]
#    mcu_lpc11xx = ["zinc/mcu_lpc11xx"]
# [dependencies]
#    rust-libcore = "*"

# [dependencies.zinc]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   # features = ["mcu_lpc11xx"]

# [dependencies.macro_platformtree]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "macro_platformtree"

# [dependencies.ioreg]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "ioreg"

# [dependencies.platformtree]
#   git = "https://github.com/hackndev/zinc"
#   branch = "master"
#   path = "platformtree"

# [dependencies.macro_zinc]
#   git = "https://github.com/hackndev/zinc"
